Deployment Related Changes
* Download icon Enhancements

Signed-off-by: pixie-codes <tulikaghosh3024@gmail.com>

--- a/angular.json
+++ b/angular.json
@@ -100,7 +100,6 @@
             "assets": [
               "src/assets",
               "src/favicon.ico"
-              
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
@@ -133,6 +132,10 @@
               "devServerTarget": "pixel-plus:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
