--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/cli": "~11.2.8",
     "@angular/compiler-cli": "~11.2.9",
     "@angular/localize": "^11.2.9",
+    "@netlify-builder/deploy": "^3.2.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^1.0.0-rc.1",
