--- a/.github/workflows/build_page.yml
+++ b/.github/workflows/build_page.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - run: |
+    - name: Build page
+      run: |
             echo hi
             echo hello
