--- a/.github/workflows/build_page.yml
+++ b/.github/workflows/build_page.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build page
       run: |
-            echo hi
+              echo testing
             echo hello
