--- a/.github/workflows/build_page.yml
+++ b/.github/workflows/build_page.yml
@@ -11,3 +11,7 @@ jobs:
       run: |
             echo testing
             echo hello
+    - name: Build page 2
+      run: |
+            echo testing
+            echo hello
