--- a/.github/workflows/build_page.yml
+++ b/.github/workflows/build_page.yml
@@ -7,11 +7,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Install packages
+      run: |
+            echo n | sudo npm install -g @angular/cli@latest
+            echo n | sudo npm install --save-dev @angular-devkit/build-angular
     - name: Build page
       run: |
-            echo testing
-            echo hello
-    - name: Build page 2
+            ng build --prod --output-path docs --base-href https://pixie-codes.github.io/pixelplusui/
+            cp docs/index.html docs/404.html
+    - name: Push changes
       run: |
-            echo testing
-            echo hello
+            git config --global user.email "khalakuzzamanapon5@gmail.com"
+            git config --global user.name "Apon77"
+            git add .
+            git commit -m "Updating site"
+            git push
