--- a/.github/workflows/build_page.yml
+++ b/.github/workflows/build_page.yml
@@ -7,17 +7,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Install packages
+    - name: Install Packages
       run: |
             pwd
             echo n | sudo npm install -g @angular/cli@latest
             echo n | sudo npm install --save-dev @angular-devkit/build-angular
-    - name: Build page
+    - name: Build Page
       run: |
             pwd
             ng build --prod --output-path docs --base-href https://pixie-codes.github.io/pixelplusui/
             cp docs/index.html docs/404.html
-    - name: Push changes
+    - name: Push Changes
       run: |
             pwd
             git config --global user.email "khalakuzzamanapon5@gmail.com"
