--- a/.github/workflows/build_page.yml
+++ b/.github/workflows/build_page.yml
@@ -16,6 +16,7 @@ jobs:
             echo n | sudo npm install --save-dev @angular-devkit/build-angular
     - name: Build Page 3
       run: |
+            cd ~/work/pp/pp
             ng build --prod --output-path docs --base-href https://apon77.github.io/pixelplusui/
     - name: Push Changes
       run: |
