--- a/.github/workflows/build_page.yml
+++ b/.github/workflows/build_page.yml
@@ -8,19 +8,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Build Page
+    - name: Install Packages
       run: |
             echo n | sudo npm install -g @angular/cli@latest
-    - name: Build Page 2
-      run: |
             echo n | sudo npm install --save-dev @angular-devkit/build-angular
-    - name: Build Page 3
+    - name: Build Page
       run: |
             ng build --prod --output-path docs --base-href https://apon77.github.io/pixelplusui/
+            cp docs/index.html docs/404.html
     - name: Push Changes
       run: |
-            git config --global user.email "khalakuzzamanapon5@gmail.com"
             git config --global user.name "Apon77"
+            git config --global user.email "khalakuzzamanapon5@gmail.com"
             git add .
             git commit -m "Updating site"
             git push
