--- a/.github/workflows/build_page.yml
+++ b/.github/workflows/build_page.yml
@@ -7,7 +7,8 @@ jobs:
   Build_Page:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Cloning Repository
+      uses: actions/checkout@v2
     - name: Install Packages
       run: |
             echo n | sudo npm install -g @angular/cli@latest
